# netket_foundation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  README.md  conf.py  getting_started.md  index.md
docs/api/: index.md  operators.md
docs/tutorials/: .gitignore  1-fnqs-training-basics.ipynb  1. FNQS training basics.ipynb  2-fnqs-with-disorder.ipynb  2. FNQS with disorder.ipynb  3-importance-sampling.ipynb  3. Importance Sampling.ipynb  4-managing-data-with-fnqs.ipynb  4. Managing data with FNQS.ipynb  5-hubbard-model-with-fnqs.ipynb  5. Hubbard model with FNQS.ipynb  base.ipynb  index.md
examples/: is_sweep.py  susceptibility.py  susceptibility_to_precision.py
netket_foundation/: __init__.py  expectation_value.py  observable.py  stats.py  vqs.py
netket_foundation/_src/driver/ngd/: driver_vmc_ngd.py  sr_srt_common.py
netket_foundation/_src/expectation_value/: importance_sampling.py  is_state.py  samples_with_probability.py
netket_foundation/_src/jax/: __init__.py
netket_foundation/_src/model/fermionic_model/: fermionic_vit.py
netket_foundation/_src/monkeypatch/: mcstate_sampling.py
netket_foundation/_src/operator/: parametrized.py
netket_foundation/_src/operator/fermion2nd/: utils.py
netket_foundation/_src/operator/pauli_strings/: operators.py
netket_foundation/_src/stats/: __init__.py  replica_stats.py
netket_foundation/_src/vqs/: fidelity_susceptibility.py  io.py  serialize.py  state.py
tests/: test_driver.py  test_is_state.py  test_jax.py  test_stats.py  test_vqs.py
